--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ p {
     background-color: #cccccc;
     position: absolute;
     top: 0;
-    left: 15%;
+    left: 14.5%;
     height: 100vh;
     overflow: scroll;
     overflow-x: hidden;
@@ -300,6 +300,8 @@ p {
 .artigo_conteudo {
     width: 95%;
     margin: 0 auto;
+    user-select: none;
+    pointer-events: none;
 }
 
 .titulo img {
@@ -367,8 +369,7 @@ p {
     position: absolute;
     height: 50vh;
     transform: translate(-50%, -50%);
-    z-index: -1;
-    pointer-events: none;
+    z-index: 999;
 }
 
 
@@ -715,6 +716,10 @@ p {
     transition: ease-in-out opacity 0.5s;
 }
 
+.draggable {
+    cursor: grab;
+}
+
 #goTop13 {
     height: 5vh;
     align-self: center;
@@ -907,7 +912,7 @@ p {
     background-color: #cccccc;
     position: absolute;
     top: 0;
-    left: 15%;
+    left: 14.5%;
     height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -1428,7 +1433,7 @@ h2 {
     transform: translateX(57vh);
     transition-duration: 1s;
     padding-top: 25px;
-    /*z-index: -1;*/
+    box-shadow:-5px 5px 30px 2px rgb(0 0 0 / 30%) ;
 }
 
 
